# osPrj

./: README.md
00_common/: linux_basic.md  notes.md  readme.md
01_helloworld/: helloOs.S  readme.md
01_helloworld/test/: bochsrc.bxrc  helloOs.img
02_protect_mode/: protect_mode_test.S  protect_mode_test.asm  readme.md
90_llvm_first/: CMakeLists.txt  build.sh
90_llvm_first/bin_src/: CMakeLists.txt
90_llvm_first/bin_src/first/: CMakeLists.txt  main0.cpp
90_llvm_first/cmake/: test_cmake_modu.cmake
90_llvm_first/src/: CMakeLists.txt
90_llvm_first/src/lib0/: CMakeLists.txt  test_info.cpp  test_info.h  test_info.inc.in
